--- a/windev/package.json
+++ b/windev/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-switch": "^7.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
