--- a/windev/package.json
+++ b/windev/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-switch": "^7.0.0"
   },
