--- a/windev/package.json
+++ b/windev/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-scroll": "^1.9.0",
     "react-switch": "^7.0.0"
   },
   "devDependencies": {
